--- a/res/layout/activity_rent_page.xml
+++ b/res/layout/activity_rent_page.xml
@@ -31,6 +31,14 @@
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/add_friends" />
+            <ImageButton
+                   android:id="@+id/imageButtonAddFriendManual"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+            	   android:background="#DAC8B6"
+                   android:adjustViewBounds="true"
+                   android:scaleType="fitXY"
+                   android:src="@drawable/add_friends" />
             
         </LinearLayout>
         <LinearLayout
