--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,6 +25,21 @@
             android:gravity="bottom"
             android:orientation="vertical" >
 
+            <ScrollView
+                android:id="@+id/scrollView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+	
+                 <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+               
+            </ScrollView>
+
+           
+
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
